chore: support Agave client 🚀

--- a/roles/solana-rpc/templates/solana.devnet.sh.j2
+++ b/roles/solana-rpc/templates/solana.devnet.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/bash
-solana-validator \
+agave-validator \
     --identity {{ solana_base_path }}/validator-keypair.json \
     --known-validator dv1ZAGvdsz5hHLwWXsVnM94hWf1pjbKVau1QVkaMJ92 \
     --known-validator dv2eQHeP4RFrJZ6UeiZWoc3XTtmtZCUKxxCApCDcRNV \
