--- a/roles/solana-rpc/templates/solana.mainnet-beta.sh.j2
+++ b/roles/solana-rpc/templates/solana.mainnet-beta.sh.j2
@@ -1,5 +1,5 @@
 #!/bin/bash
-solana-validator \
+agave-validator \
     --identity {{ solana_base_path }}/validator-keypair.json \
     --known-validator 7Np41oeYqPefeNQEHSv1UDhYrehxin3NStELsSKCT4K2 \
     --known-validator GdnSyH3YtwcxFvQrVVJMm1JhTS4QVX7MFsX56uJLUfiZ \
